--- a/restuarant1/package.json
+++ b/restuarant1/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +42,5 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-    
   }
 }
